# Rengin

./: CMakeLists.txt  README.md  information.txt
Glad/: CMakeLists.txt
Glad/include/glad/: glad.h
Glad/src/: glad.c
ImGuizmo/: CMakeLists.txt
Imgui/: CMakeLists.txt
Rengine/: CMakeLists.txt  appication.cpp  application.hpp  core.hpp  entrypoint.hpp  log.hpp  rengine.hpp
Rengine-Editor/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.hpp  SandBox2D.cpp  SandBox2D.hpp  main.cpp
Rengine-Editor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Rengine-Editor/assets/cubemap/Color/: light.txt
Rengine-Editor/assets/cubemap/CornellBox/: light.txt  transport.txt
Rengine-Editor/assets/cubemap/GraceCathedral/: light.txt  transport.txt
Rengine-Editor/assets/cubemap/Indoor/: light.txt  transport.txt
Rengine-Editor/assets/cubemap/Skybox/: light.txt  transport.txt
Rengine-Editor/assets/cubemap/Skybox2/: light.txt
Rengine-Editor/assets/scenes/: 1.yaml  Example.yaml  voxel.yaml
Rengine-Editor/assets/shaders/: AccumulateFragment.glsl  BaseFragment.glsl  BaseVertex.glsl  CircleVertex.glsl  CopyFrameFragment.glsl  CopyFrameVertex.glsl  DenoiseFragment.glsl  DenoiseVertex.glsl  FlatColorVertex.glsl  ForDeferFragment.glsl  ForDeferVertex.glsl  KullaContyFragment.glsl  KullaContyVertex.glsl  LineFragment.glsl  LineVertex.glsl  PRTFragment.glsl  PRTVertex.glsl  RTRTFragment.glsl  RTRTVertex.glsl  ShadowMapF.glsl  ShadowMapV.glsl  ShadowPhongF.glsl  ShadowPhongV.glsl  SkyBoxFragment.glsl  SkyBoxVertex.glsl  VoxelFragment copy 2.glsl  VoxelFragment copy.glsl  VoxelFragment.glsl  VoxelVertex copy.glsl  VoxelVertex.glsl  gbufferFragment.glsl  gbufferVertex.glsl  ssrFragment.glsl  ssrVertex.glsl  textureFragment.glsl  textureVertex.glsl
Rengine/Event/: ApplicationEvent.hpp  MouseEvent.hpp  event.hpp
SandBox/: CMakeLists.txt  SandBox2D.cpp  SandBox2D.hpp  main.cpp
SandBox/assets/shaders/: CircleFragment.glsl  CircleVertex.glsl  FlatColorVertex.glsl  textureFragment.glsl  textureVertex.glsl
Stb/: CMakeLists.txt
TinyOBJLoader/: CMakeLists.txt
Voxer-Solve/: main.cpp
Voxer-Solve/Panels/: SceneHierarchyPanel.cpp
Voxer-Solve/assets/scenes/: Example.yaml
Voxer-Solve/assets/shaders/: FlatColorVertex.glsl  VoxelFragment copy.glsl
Voxer-Solver/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.hpp
Voxer-Solver/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Voxer-Solver/assets/scenes/: voxel2.yaml
Voxer-Solver/assets/shaders/: FlatColorFragment.glsl  VoxelFragment.glsl  VoxelOutfaceFragment.glsl  VoxelOutfaceFragment2.glsl  VoxelOutfaceVertex.glsl  frag_p.glsl  fragment.glsl  textureFragment.glsl
rengine-src/: CMakeLists.txt  rengine.hpp  repch.cpp  repch.hpp
rengine-src/Rengine/: Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  MouseButtonCodes.hpp  OrthoGraphicsCameraController.cpp  OrthoGraphicsCameraController.hpp  Window.hpp  appication.cpp  application.hpp  core.hpp  entrypoint.hpp  log.cpp  log.hpp
rengine-src/Rengine/Core/: Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.hpp  MouseCodes.hpp  ThreadPool.cpp  ThreadPool.hpp  TimeStep.hpp  UUID.cpp  UUID.hpp  Window.hpp  appication.cpp  application.hpp  core.hpp  entrypoint.hpp
rengine-src/Rengine/Debug/: Instrumentor.hpp
rengine-src/Rengine/Event/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
rengine-src/Rengine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
rengine-src/Rengine/Math/: Math.cpp  Math.hpp  Matrix9.cpp  Matrix9.hpp  trackball.cpp  trackball.hpp
rengine-src/Rengine/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
rengine-src/Rengine/Platform/Windows/: WindowExternalExe.cpp  WindowExternalExe.hpp  WindowInput.cpp  WindowInput.hpp  WindowPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.hpp
rengine-src/Rengine/Renderer/: Buffer.cpp  Buffer.hpp  Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsContext.hpp  Material.cpp  Material.hpp  OrthoGraphicsCamera.cpp  OrthoGraphicsCamera.hpp  OrthoGraphicsCameraController.cpp  OrthoGraphicsCameraController.hpp  Render.cpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp  RendererAPI.cpp  RendererAPI.hpp  RendererObject.cpp  RendererObject.hpp  Shader.cpp  Shader.hpp  SubTexture2D.cpp  SubTexture2D.hpp  SubTexture3D.cpp  SubTexture3D.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
rengine-src/Rengine/Renderer/Methods/: BaseMethod.hpp  KullaCountyMethod.cpp  KullaCountyMethod.hpp  PRTMethod.cpp  PRTMethod.hpp  PhongMethod.cpp  PhongMethod.hpp  RTRTMethod.cpp  RTRTMethod.hpp  SSRMethod.cpp  SSRMethod.hpp  ShadowMapMethod.cpp  ShadowMapMethod.hpp
rengine-src/Rengine/Scene/: Component.hpp  Entity.cpp  Entity.hpp  Lights.cpp  Lights.hpp  ObjManager.cpp  ObjManager.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp  ScriptableEntity.hpp  SkyBox.cpp  SkyBox.hpp
rengine-src/Rengine/Utils/: BVHMortonCompute.cpp  BVHMortonCompute.hpp  ExternalExe.hpp  PbrCompute.cpp  PbrCompute.hpp  PlatformUtils.hpp  PrtCompute.cpp  PrtCompute.hpp  TransferFunction.hpp  mapping.hpp
rengine-src/Rengine/Utils/IO/: RawReader.cpp  RawReader.hpp  RawWriter.cpp  RawWriter.hpp
